[gd_scene load_steps=8 format=2]

[ext_resource path="res://RhythmGame/Hits/HitBeat.gd" type="Script" id=1]
[ext_resource path="res://RhythmGame/UI/LabelCustom.tscn" type="PackedScene" id=2]
[ext_resource path="res://RhythmGame/Hits/TargetCircle.tscn" type="PackedScene" id=3]
[ext_resource path="res://RhythmGame/Hits/hit_sprites.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 75.0

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="HitBeat" type="Node2D"]
modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 1 )

[node name="TargetCircle" parent="." instance=ExtResource( 3 )]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
hframes = 6

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/destroy = SubResource( 2 )
anims/show = SubResource( 3 )

[node name="LabelCustom" parent="." instance=ExtResource( 2 )]

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
